--- a/README.adoc
+++ b/README.adoc
@@ -5,110 +5,36 @@
 :lang: FR
 :imagesdir: readme/assets
 
-[horizontal]
-Github:: image:https://github.com/baldir-fr/template-asciidoctor-dockerized/actions/workflows/generate-docs-and-publish-with-github-pages.yml/badge.svg[Generate and deploy static content to Pages,link="https://github.com/baldir-fr/template-asciidoctor-dockerized/actions/workflows/generate-docs-and-publish-with-github-pages.yml",window="_blank"]
+image:https://github.com/baldir-fr/baldir-vcf-tools/actions/workflows/build-library.yml/badge.svg[Build library,link="https://github.com/baldir-fr/baldir-vcf-tools/actions/workflows/build-library.yml",window="_blank"]
+image:https://github.com/baldir-fr/baldir-vcf-tools/actions/workflows/generate-docs-and-publish-with-github-pages.yml/badge.svg[Generate and deploy static content to Pages,link="https://github.com/baldir-fr/baldir-vcf-tools/actions/workflows/generate-docs-and-publish-with-github-pages.yml",window="_blank"]
 
-Gitlab:: image:https://gitlab.com/marc-bouvier/template-asciidoctor-dockerized/badges/main/pipeline.svg[Gitlab pipeline status,link="https://gitlab.com/marc-bouvier/template-asciidoctor-dockerized/-/pipelines",title="gitlab pipeline status",window="_blank"]
+Utility library for parsing link:https://datatracker.ietf.org/doc/html/rfc6350[vCard Format,window=_blank].
 
-Génération de slides, pdf, ebook, docx à l'aide de https://docs.asciidoctor.org/asciidoctor/latest/[Asciidoctor,window=_blank], https://docs.asciidoctor.org/reveal.js-converter/latest/[RevealJs,window=_blank] et https://docs.docker.com/compose/[Docker Compose,window=_blank].
+== Run Tests
 
-Ce dépôt a été généré à partir du template : https://github.com/baldir-fr/template-asciidoctor-dockerized[window=_blank]
+[source,shell]
+----
+deno test
+# Or watching file changes
+deno test --watch src
+# Or with GNU Make
+make deno-test
 
-== Documents générés
+# Using docker compose
+docker compose run --rm deno-test
+# Or with GNU Make
+make dc-deno-test
+----
 
-* link:docs/index.html[Slides générées au format HTML,window=_blank]
+== Generated Documentation
+
+* link:docs/index.html[Slides in HTML format,window=_blank]
 * link:docs/output.pdf[Pdf,window=_blank]
 * link:docs/output.epub[Ebook,window=_blank]
 * link:docs/output.docbook.xml[Docbook,window=_blank]
 * link:docs/output.docx[Docx,window=_blank]
 
-== Écrire du contenu
-
-Modifier les fichiers présents dans link:_content/[`_content/`].
-
-Voir la section <<_ressources-asciidoctor-complementaires,Ressources Asciidoctor complémentaires>> pour démarrer avec Asciidoctor et RevealJs.
-
-[#_ressources-asciidoctor-complementaires]
-== Ressources Asciidoctor complémentaires
-
-include::readme/ressources-asciidoctor-complementaires.adoc[➡️ Ressources Asciidoctor complémentaires]
-
-== Génération du contenu
-
-=== Pré-requis pour construire les exemples
-
-* Docker Engine 19.03.0+
-* Docker compose
-
-Optionnel
-
-* GNU Make
-
-=== Génération des slides
-
 [source,shell]
 ----
-docker compose run --rm build-slides
-# Ou avec GNU Make
-make dc-slides
+make docs
 ----
-
-=== Génération du Pdf
-
-[source,shell]
-----
-docker compose run --rm build-slides; rm -rf docs/assets;cp -r _content/assets docs/
-# Ou avec GNU Make
-make dc-pdf
-----
-
-=== Génération de l'E-book
-
-[source,shell]
-----
-docker compose run --rm build-epub
-# Ou avec GNU Make
-make dc-epub
-----
-
-[#_generation_du_docbook]
-=== Génération du docbook
-
-[source,shell]
-----
-docker compose run --rm build-docbook
-# Ou avec GNU Make
-make dc-docbook
-----
-
-=== Génération docx
-
-Prérequis
-
-[WARNING]
-====
-Sur  macOS (M1), l'image Docker n'étant pas optimisée pour `linux/arm64/v8`, Docker requiert au moins 6.5 Go de RAM allouée (et 7.25 Go de RAM pour des performances convenables). Sans cette configuration, la commande échoue avec le message `Killed`.
-
-Il reste préférable de lancer la commande pandoc native qui donne des performances en dessous de la seconde (installation : `brew install pandoc`)
-
-include::readme/docx-docker-macos-m1-benchmark.adoc[]
-====
-
-Après avoir <<_generation_du_docbook,généré le docbook>>
-
-[source,shell]
-----
-# Avec docker installé
-docker compose run --rm build-docx
-# Ou avec GNU Make
-make dc-docx
-
-# Avec pandoc installé localement (à privilégier sur macOS M1)
-./generate-docx.sh
-# Ou avec GNU Make
-make docx
-----
-
-== Déploiement
-
-include::readme/deploiement.adoc[➡️ Méthodes de déploiement]
